--- a/code/templates/listEntities.html
+++ b/code/templates/listEntities.html
@@ -1,22 +1,22 @@
 <section id="header">
     <div class="container">
-      ###siteLogo###
-          <nav id="nav">
-            <ul>
-              <li>
-                <a href="#" class="icon fa-chart-bar"><span></span></a>
-                <ul>
-                  ###menu###
-                </ul>
-              </li>
-            </ul>
-          </nav>
-      </div>
+        ###siteLogo###
+        <nav id="nav">
+          <ul>
+            <li>
+              <a href="#" class="icon fa-chart-bar"><span></span></a>
+              <ul>
+                ###menu###
+              </ul>
+            </li>
+          </ul>
+        </nav>
+    </div>
 </section>
 <section id="features">
     <div class="container">
         <header>
-            <h2>###heading###</h2>
+            <h1>###heading###</h1>
         </header>
     </div>
 </section>
@@ -27,6 +27,9 @@
                 <article class="box post">
                     <accordionDiv>
                         ###accordion###
+                        <buttonLink>
+                          ###pagination###
+                        </span></buttonLink>
                     </accordionDiv>
                 </article>
             </div>
