--- a/code/assets/css/main.css
+++ b/code/assets/css/main.css
@@ -1746,7 +1746,27 @@ strong, b {
 		}
 
 /* Button */
-
+	buttonLink a{
+		-moz-transition: all 0.25s ease-in-out;
+		-webkit-transition: all 0.25s ease-in-out;
+		-ms-transition: all 0.25s ease-in-out;
+		transition: all 0.25s ease-in-out;
+		-webkit-appearance: none;
+		position: relative;
+		display: inline-block;
+		background: #ed786a;
+		color: rgb(214, 197, 197) !important;
+		border-radius: 4px;
+		border: 0;
+		outline: 0;
+		box-shadow: 0.125em 0.175em 0 0 rgba(0, 0, 0, 0.125);
+		font-weight: 600;
+		text-align: center;
+		font-size: 1.4em;
+		letter-spacing: 2px;
+		padding: 0.5em 2em 0.5em 2em;
+		margin:.5em 0.3em .5em 0.3em;
+	}
 	input[type="button"],
 	input[type="submit"],
 	input[type="reset"],
